--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -95,35 +95,35 @@
                                 <div class="row">
                                     <% if(RecommendaResult[0].RecommendCourse === "Algorithms and Flowcharts"){ %> <%# Output จาก Recommend มาเทียบ %> 
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Algorithms and Flowcharts</button>
                                         </div>
                                     <% }else if(RecommendaResult[0].RecommendCourse === "Datatype and Variable"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Datatype and Variable</button>
                                         </div>
                                     <% }else if(RecommendaResult[0].RecommendCourse === "Input and Output"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Input_and_Output'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Input_and_Output'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Input and Output</button>
                                         </div>
                                     <% }else if(RecommendaResult[0].RecommendCourse === "Operators and Expressions"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Operators and Expressions</button>
                                         </div>
                                     <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statement"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Selection_Statement'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Selection_Statement'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Selection Statement</button>
                                         </div>
                                     <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statement"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Loop_Statement'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Loop_Statement'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Loop Statement</button>
                                         </div>
                                     <% }else if(RecommendaResult[0].RecommendCourse === "Array and String"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Array_and_String'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Array_and_String'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Array and String</button>
                                         </div>
                                     <% }else if(RecommendaResult[0].RecommendCourse === "Function"){ %>
                                         <div class="col-6">
-                                            <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i></button>
+                                            <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-sm btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> Function</button>
                                         </div>
                                     <% } else{ %>  <%# ถ้าไม่มีการแนะนำ คือ เรียนตาม path ที่เลือกเรียบร้อยแล้ว%> 
                                         <h6>Finished</h6>
