--- a/views/student/layouts/navbar.ejs
+++ b/views/student/layouts/navbar.ejs
@@ -35,31 +35,30 @@
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
   </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav mb-0 h5 ms-auto">
-          <li class="nav-item "><a class="nav-link" href="/" style="color: #ffffff;">Home</a></li>
-
-          <% if (user) { %>
-            
-            <% if (user.role === 'ADMIN') { %>
-              <li class="nav-item "><a class="nav-link" href="/admin/users" style="color: #ffffff;">Manage Users</a></li>
-            <% } %>
-            <% if (user.role === 'Teacher') { %>
-              <li class="nav-item "><a class="nav-link" href="/class" style="color: #ffffff;">Class </a></li>
-              <li class="nav-item "><a class="nav-link" href="/check" style="color: #ffffff;">Exam-Check </a></li>
-            <% } %>
-            <% if (user.role === 'Student') { %>
-              <li class="nav-item "><a class="nav-link" href="/course" style="color: #ffffff;">Course </a></li>
-              <li class="nav-item "><a class="nav-link" href="/project" style="color: #ffffff;">Project </a></li>
-            <% } %>
-            <li class="nav-item "><a class="nav-link"  href="/auth/logout" style="color: #ffffff;"><i class="fa fa-power-off" style="font-size: 25px;;align-items: center; " ></i></a></li>
-            <% } else { %>
-              <li class="nav-item "><a class="nav-link"  href="/auth/register" style="color: #ffffff;">Register</a></li>
-              <li class="nav-item "><a class="nav-link"  href="/auth/login" style="color: #ffffff;">Login</a></li>
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="nav navbar-nav hidden-xs">
+      <li class="nav-item "><a class="nav-link" href="/" style="color: #ffffff;">Home</a></li>
+      <% if (user) { %>
+          <% if (user.role === 'ADMIN') { %>
+            <li class="nav-item "><a class="nav-link" href="/admin/users" style="color: #ffffff;">Manage Users</a></li>
           <% } %>
-
-      </ul>
-    </div>
+          <% if (user.role === 'Teacher') { %>
+            <li class="nav-item "><a class="nav-link" href="/class" style="color: #ffffff;">Class </a></li>
+            <li class="nav-item "><a class="nav-link" href="/check" style="color: #ffffff;">Exam-Check </a></li>
+          <% } %>
+          <% if (user.role === 'Student') { %>
+            <li class="nav-item "><a class="nav-link" href="/course" style="color: #ffffff;">Course</a></li>
+            <li class="nav-item "><a class="nav-link" href="/project" style="color: #ffffff;">Project</a></li>
+          <% } %>
+        <% } else { %>
+            <li class="nav-item "><a class="nav-link"  href="/auth/register" style="color: #ffffff;">Register</a></li>
+            <li class="nav-item "><a class="nav-link"  href="/auth/login" style="color: #ffffff;">Login</a></li>
+        <% } %>
+    </ul>
+    <ul class="navbar-nav mb-0 h5 ms-auto">
+      <li class="nav-item "><a class="nav-link"  href="/auth/logout" style="color: #ffffff;"><i class="fa fa-power-off" style="font-size: 25px;;align-items: center; " ></i></a></li>     
+    </ul>
+  </div>
   </div>
 </nav>
 <br><br>
