--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -220,6 +220,11 @@
         <% } %>
             
         <div>
+            <h1>Menu</h1>
+            <p><a href="">course</a></p>
+            <p><a href="">project</a></p>
+        </div>
+        <div>
             <table>
                     <tr>
                         <th style="width: 300px;" class="head">Lesson</th>
@@ -287,7 +292,7 @@
                     </tr>
                 
             </table>    
-        </div>   
+        </div>
       <br><br><br><br><br><br>
     </div> 
     
