--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -45,7 +45,7 @@
     <title>HOME</title>
 </head>
 
-<body>
+<body style="background-color: #0b2645; background-image: linear-gradient(#200b45, #4183a2);">
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
 
