--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -18,12 +18,12 @@
     }
   }
 </style>
-<body class="" style="background-color: #0b2645; background-image: linear-gradient(#0b2645, rgb(0, 118, 110));" >
+<body class="" style="background-color: #0b2645; background-image: linear-gradient(#200b45, #4183a2);" >
 <main>
 <%- include('../layouts/navbar') %>  
 <div id="tagline" style="width: 500px;">
   <h1>Learn<span id="text"> Coding!</span><i class="cursor"></i></h1>
-  <button class="get-started-btn" onclick="document.location='/get-started/';">Get Started</button>
+  <button class="get-started-btn" onclick="document.location='/auth/login';">Get Started</button>
 
 </div>
 <img src="https://img.freepik.com/free-psd/3d-nft-icon-developer-male-illustration_629802-6.jpg?t=st=1712830382~exp=1712833982~hmac=d33182ac3e551ce030e81cea1feedf41b95303d997536c7d534fa4931e6495a4&w=1480" id="moon">
