--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -193,6 +193,7 @@ else {
             t = "/course-Algorithms_and_Flowcharts#Tracing";
             e = "/course-Algorithms_and_Flowcharts#Explaining";
             w = "/course-Algorithms_and_Flowcharts";
+            p = StudentAnswer[i].scoreLV3
         }
         
         if(StudentAnswer[i].contentName === "Datatype_and_Variable-(Pre-test)" || StudentAnswer[i].contentName === "Datatype_and_Variable-(Post-test)" ){
@@ -267,6 +268,9 @@ else {
                        
         
         </div>
+
+      
+
     </div>
  
 
