--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -20,7 +20,7 @@
 </style>
 <body class="" style="background-color: #0b2645; background-image: linear-gradient(#200b45, #4183a2);" >
 <main>
-<%- include('../layouts/navbar') %>  
+<%- include('../layouts/navbar-viewer') %>  
 <div id="tagline" style="width: 500px;">
   <h1>Learn<span id="text"> Coding!</span><i class="cursor"></i></h1>
   <button class="get-started-btn" onclick="document.location='/auth/login';">Get Started</button>
