--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -4,7 +4,7 @@
 
 .item1 {
     height: 140px;
-    background-color: #9C7EB7;
+    background-color: #ffffff;
     padding: 10px;
     width: auto;
 }
