--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -228,8 +228,8 @@
             
         <div>
             <h1>Menu</h1>
-            <p><a href="">course</a></p>
-            <p><a href="">project</a></p>
+            <p><a href="/course">course</a></p>
+            <p><a href="/project">project</a></p>
         </div>
     </div>
 
