--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -93,8 +93,13 @@ else {
 
         }
         else{
-            checkedLV4 = "-";
-            TeacherCheck = "รอตรวจ";
+            if(StudentAnswer[i].contentName === ""){
+                checkedLV4 = "";
+            TeacherCheck = "";
+            } else {
+                checkedLV4 = "-";
+                TeacherCheck = "รอตรวจ";
+            }
         }
 
         /* Score tranfrom to Pass/Not Pass**/
