--- a/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
+++ b/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
@@ -598,7 +598,7 @@ function countTimer() {
                     <br>
                     <!-- ข้อ 19 -->
                     <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
-                        19. (Deployment)  ให้เขียน Flowchart ของโปรแกรมแปลงอุณหภูมิ พิมพ์  F คือการแปลง Celcius เป็น Fahrenheit <br>
+                        19.1 (Deployment)  ให้เขียน Flowchart ของโปรแกรมแปลงอุณหภูมิ พิมพ์  F คือการแปลง Celcius เป็น Fahrenheit <br>
                         และพิมพ์ C คือการแปลง Fahrenheit เป็น Celcius โดยรับค่าของตัวแปร ทำการคำนวณ และแสดงค่าของข้อมูลดังนี้  <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
                         <iframe src="https://drive.google.com/file/d/1w737Hm85h6icIA0eL-N75Ul4Sca8sQtH/preview" width="100%" height="480" allow="autoplay"></iframe>                
