--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -1206,7 +1206,7 @@
 
         
         <button onclick="window.location.href='/course-Input_and_Output-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบย่อย</h2></u></button>
+        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
         
 
         
