--- a/views/student/course/4_Operators_and_Expressions-course.ejs
+++ b/views/student/course/4_Operators_and_Expressions-course.ejs
@@ -1127,7 +1127,7 @@
 
         
         <button onclick="window.location.href='/course-Operators_and_Expressions-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบย่อย</h2></u></button>
+        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
         
 
         
