--- a/views/student/course/5_Selection_Statements-course.ejs
+++ b/views/student/course/5_Selection_Statements-course.ejs
@@ -1373,7 +1373,7 @@
 
         
         <button onclick="window.location.href='/course-Selection_Statements-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบย่อย</h2></u></button>
+        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
 
         <br></div>
     </div>
