--- a/views/student/course/6_Loop_Statements-course.ejs
+++ b/views/student/course/6_Loop_Statements-course.ejs
@@ -1228,9 +1228,9 @@
                         </div></div>
 
 
-        <!-- 
-        <button onclick="window.location.href='/course-Pointers-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบย่อย</h2></u></button>-->
+        
+        <button onclick="window.location.href='/course-Loop_Statements-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
 
         
         </div>
