--- a/views/student/course/7_Arrays_and_Strings-course.ejs
+++ b/views/student/course/7_Arrays_and_Strings-course.ejs
@@ -64,9 +64,9 @@
                 <h2>ใช้งาน string.h Library คำสั่งด้านข้อความ</h2>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/oqTVH0aRfro?si=UbPzvdA6UGtrbyq4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
            
-        <!-- 
-        <button onclick="window.location.href='/course-Function-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบย่อย</h2></u></button>-->
+        
+        <button onclick="window.location.href='/course-Arrays_and_Strings-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
         
 
         <br></div>
