--- a/views/student/course/8_Functions-course.ejs
+++ b/views/student/course/8_Functions-course.ejs
@@ -54,9 +54,9 @@
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/GunI8Uga3hs?si=PT4sSeH1uOJ1h2hG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
-            <!-- 
-            <button onclick="window.location.href='/course-Structure-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-            <h2><u>แบบทดสอบย่อย</h2></u></button>-->
+            
+            <button onclick="window.location.href='/course-Functions-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+            <h2><u>แบบทดสอบหลังเรียน</h2></u></button>
         
 
         
