update project unlock

--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -99,7 +99,7 @@
                             <%= RecommendaResult[0].RecommendationType %> <%# วิธีแนะนำคือ %> 
                             <br>
                             
-                            <% if (TicketBooking_SystemPercent === 100 && Library_SystemPercent === 100 && RoshamboPercent === 100 && CalendarPercent === 100 && CalculatorPercent === 100 ) { %> <%# ถ้า Path ครบแล้ว %> 
+                            <% if (TicketBooking_SystemPercent === 100 && PointofSales_SystemPercent === 100 && ProjectQUIZ3Percent === 100 ) { %> <%# ถ้า Path ครบแล้ว %> 
                                 <p>คุณได้เรียนครบแล้ว!</p>
                             <% } else { %>
                                 <div class="row">
