--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -36,7 +36,7 @@
                             <% } %>
                             <% if(RecommendaResult[0].RoshamboPercent === 100) {count = count-1 %> <%# Follow node %> 
                               <p class="wrapbox auto">
-                                <br><a href="/project-Roshambo" style="color:black">Roshambo</a>
+                                <br><a href="/project-Project_QUIZ3" style="color:black">Roshambo</a>
                               </p>
                             
                               <% } else{ %>  
