--- a/views/student/project/project_main.ejs
+++ b/views/student/project/project_main.ejs
@@ -8,6 +8,10 @@
 
     
     <style>
+        body {
+            padding-top: 30px;
+            color: #fff;
+        }
         .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -31,11 +35,11 @@
         }
     </style>
 
-    <link rel='stylesheet' href='stylesheets/home.css' />
+    <link rel='stylesheet' href='stylesheets/home1.css' />
     <title>PROEJECT</title>
 </head>
 
-<body>
+<body class="quantico-regular" style="background-color: #122c5a;">
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     <!-- end of Narbar-->
