--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -1,12 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap');
+.quantico-regular {
+    font-family: "Quantico", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.chakra-petch-regular {
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 
 .item1 {
     height: 140px;
     background-color: #ffffff;
     padding: 10px;
-    width: auto;
+    width: auto; 
 }
 .item2 {
 
