--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -6,55 +6,77 @@
   .projectbox{
     width: 150px;
     height: 200px;
-    background-color: blueviolet;
+    background-color: #5994ce;
+    box-shadow: 0 0 10px 5px #38fbdb;
     margin: 10px;
+    margin-top: 30px;
+    margin-bottom: 40px;
     padding: 10px;
     border-radius: 10px;
     font-size: 18px;
     text-align: center;
   }
+  .projectbox:hover {
+    box-shadow: 0 0 10px 5px #122c5a;
+  }
+  .quantico-regular {
+    font-family: "Quantico", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .project {
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  .button {
+    color: #fff;
+    background-color: #b957ce;
+    
+  }
+  .button:hover {
+    color: #38fbdb;
+    box-shadow: 0 0 15px 5px #fc0ff5;
+  }
 </style>
 
 <!-- MIDDLE 1 -->
-<div class="content">
+<div class="content" style="color: #fff;">
     <div id = "content" class="container">
 <!--   C Language -->
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
-            <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Introduce</h1>
-                <ol class="breadcrumb">
+            <div id="collapseIntroduce" class="accordion-collapse show project" style="background-color: #3a4e93; box-shadow: 0 0 15px 5px #38fbdb;" data-bs-parent="#accordionParentSyntax">
+                <h1>Project</h1> <!--
+                <ol class="breadcrumb" style="background-color: #3a4e93;">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
                     <li class="breadcrumb-item active" aria-current="page">Project</li>
-                </ol>
-                   <div class="box bg-light h2 mb-5 shadow" >
+                </ol>-->
+                   <div>
                     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
                         <div lang="ja">
                           <% var count = 3 %>
                           <% if(Object.keys(RecommendaResult).length === 0){ %>
 
                           <% } else{ %>  
-                            <% if(RecommendaResult[0].TicketBooking_SystemPercent >= 50) { count = count-1%> <%# Follow node %> 
-                                    <div class="projectbox wrapbox">
-                                      <a href="/project-Ticket_Booking_System" style="color:rgb(255, 255, 255)">
-                                        <p>Project Quiz 1</p>
-                                      </a>
-                                    </div>
-                            <% } %>
-                            <% if(RecommendaResult[0].PointofSales_SystemPercent >= 75) {count = count-1 %> <%# Follow node %> 
-                              <div class="projectbox wrapbox">
-                                <a href="/project-Point_of_Sales_System" style="color:rgb(255, 255, 255)">
-                                  <p>Project Quiz 2</p>
-                                </a>
-                              </div>
-                            <% } %>
-                            <% if(RecommendaResult[0].ProjectQUIZ3Percent === 100) {count = count-1 %> <%# Follow node %> 
-                              <div class="projectbox wrapbox">
-                                <a href="/project-Project_QUIZ3" style="color:rgb(255, 255, 255)">
-                                  <p>Project Quiz 3</p>
-                                </a>
-                              </div>
+                            <div class="projectbox wrapbox">
+                              <p>Project Quiz 1</p>
+                              <% if(RecommendaResult[0].TicketBooking_SystemPercent >= 50) { count = count-1%> <%# Follow node %> 
+                                <a href="/project-Ticket_Booking_System" style="color:rgb(255, 255, 255)">click</a>
                               <% } %>
+                            </div>
+                            <div class="projectbox wrapbox">
+                              <p>Project Quiz 2</p>
+                              <% if(RecommendaResult[0].PointofSales_SystemPercent >= 75) {count = count-1 %> <%# Follow node %> 
+                                  <a href="/project-Point_of_Sales_System" style="color:rgb(255, 255, 255)">click</a>
+                              <% } %>
+                            </div>
+                            <div class="projectbox wrapbox">
+                              <p>Project Quiz 3</p>
+                              <% if(RecommendaResult[0].ProjectQUIZ3Percent === 100) {count = count-1 %> <%# Follow node %> 
+                                <a href="/project-Project_QUIZ3" style="color:rgb(255, 255, 255)">click</a>
+                              <% } %>
+                            </div>
                           <% } %>
                             
                              
@@ -63,10 +85,10 @@
                 </div>
                 <% if(count >=3 || count === 0) { %> <%# Follow node %> 
                     <h3>Project ปลดล็อกครบแล้ว!</h3>
-                    <a href="/" class="btn btn-outline-dark">กลับไปหน้าแรก</a>
+                    <a href="/" class="btn button">กลับไปหน้าแรก</a>
                   <% } else{ %>  
                     <h3>มีอีก <%= count %> Project ที่ไม่ปลดล็อก!</h3>
-                    <a href="/course" class="btn btn-outline-dark">เข้าสู่บทเรียน</a>
+                    <a href="/course" class="btn button">เข้าสู่บทเรียน</a>
                  <% } %>
                 
         <br></div>
