--- a/public/stylesheets/viewer.css
+++ b/public/stylesheets/viewer.css
@@ -1,16 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
+
+.quantico-regular {
+    font-family: "Quantico", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     letter-spacing: 2px;
 }
 
 #tagline {
     position: absolute;
-    width: 500px;
     z-index: 100;
     top: 30%;
-    right: 20%;
+    right: 30%;
 }
 h1 {
-    color: white;
+    color: #38fbdb;
 }
 .get-started-btn {
     margin-top: 25px;
@@ -23,11 +30,9 @@ h1 {
     border-radius: 100%;
     position: absolute;
     top: 30%;
-    left: 20%;
-    box-shadow: 0 0 80px #ffffff99;
+    left: 30%;
+    box-shadow: 0 0 80px #38fbdb;
     width: 200px;
     height: 200px;
-    transition: 1s linear all;
-    animation: moon_anim 200s infinite;
-    animation-timing-function: linear;
+
 }
